--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "mars-weather",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.mars.spacexcompanion.app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-tooltip": "^4.2.9"
   },
   "scripts": {
     "start": "react-scripts start",
